@@ -1,3 +1,7 @@
+2004-12-27  Zoltan Varga  <vargaz@freemail.hu>
+
+	* ImageCodecInfo.cs: Fix marshalling of arrays on amd64.
+
 2004-11-25  Marek Safar  <marek.safar@seznam.cz>
 
 	* ColorPalette.cs: Add CheckStatus to GetAdjustedPalette.
